--- a/myapp/templates/register_mahasiswa.html
+++ b/myapp/templates/register_mahasiswa.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Register Mahasiswa</title>
+    <title>Registrasi Mahasiswa</title>
 </head>
 <body>
-    <h2>Form Registrasi Mahasiswa</h2>
+    <h2>Registrasi Akun Mahasiswa</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Register Mahasiswa</button>
+        <button type="submit">Daftar</button>
     </form>
 </body>
 </html>
